Replace images with videos in gallery section

--- a/melhor_imovel.html
+++ b/melhor_imovel.html
@@ -819,10 +819,11 @@
             <!-- SUBSTITUA os src="" pelas suas imagens/vídeos reais -->
             <div class="gallery-item">
                 <!-- <img src="imagem_portaria.jpg" alt="Portaria"> -->
+                <video autoplay muted loop playsinline><source src="portaria.mp4" type="video/mp4">
                 <div class="gallery-label">Portaria Moderna</div>
             </div>
             <div class="gallery-item">
-                <!-- <img src="imagem_fachada.jpg" alt="Fachada"> -->
+               
                 <video autoplay muted loop playsinline><source src="fachada.mp4" type="video/mp4">
                 <div class="gallery-label">Fachada</div>
             </div>
