Update hero section with image and video changes

--- a/melhor_imovel.html
+++ b/melhor_imovel.html
@@ -776,7 +776,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <!-- SUBSTITUA este comentário por: <video class="hero-media" autoplay muted loop playsinline><source src="SEU_VIDEO.mp4" type="video/mp4"></video> -->
-        <!-- OU uma imagem: <img class="hero-media" src="SUA_IMAGEM.jpg" alt="Reserva Naturalis"> -->
+       <img class="hero-media" src="fundo.jpg"> -->
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <span class="hero-badge">Lançamento Paciência/RJ</span>
@@ -828,8 +828,8 @@
                 <div class="gallery-label">Fachada</div>
             </div>
             <div class="gallery-item">
-                <!-- <video autoplay muted loop playsinline><source src="video_areas_comuns.mp4" type="video/mp4"></video> -->
-                <div class="gallery-label">Áreas Comuns</div>
+               <video autoplay muted loop playsinline><source src="piscina.mp4" type="video/mp4">
+                <div class="gallery-label">Churrasqueira</div>
             </div>
         </div>
     </section>
