Update delivery date and video sources in HTML

--- a/melhor_imovel.html
+++ b/melhor_imovel.html
@@ -770,7 +770,7 @@
 <body>
     <!-- Top Bar -->
     <div class="top-bar">
-        <strong>LANÇAMENTO EXCLUSIVO</strong> • Entrega Janeiro/2027 • Condições Especiais Durante a Obra
+        <strong>LANÇAMENTO EXCLUSIVO</strong> • Entrega Dezembro/2026 • Condições Especiais Durante a Obra
     </div>
 
     <!-- Hero Section -->
@@ -816,9 +816,8 @@
         </div>
 
         <div class="gallery-grid">
-            <!-- SUBSTITUA os src="" pelas suas imagens/vídeos reais -->
+        
             <div class="gallery-item">
-                <!-- <img src="imagem_portaria.jpg" alt="Portaria"> -->
                 <video autoplay muted loop playsinline><source src="portaria.mp4" type="video/mp4">
                 <div class="gallery-label">Portaria Moderna</div>
             </div>
@@ -828,7 +827,7 @@
                 <div class="gallery-label">Fachada</div>
             </div>
             <div class="gallery-item">
-               <video autoplay muted loop playsinline><source src="piscina.mp4" type="video/mp4">
+               <video autoplay muted loop playsinline><source src="churrasqueira.mp4" type="video/mp4">
                 <div class="gallery-label">Churrasqueira</div>
             </div>
         </div>
