Remove comment for video in hero section

--- a/melhor_imovel.html
+++ b/melhor_imovel.html
@@ -775,8 +775,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <!-- SUBSTITUA este comentário por: <video class="hero-media" autoplay muted loop playsinline><source src="SEU_VIDEO.mp4" type="video/mp4"></video> -->
-       <img class="hero-media" src="fundo.jpg"> -->
+       <img class="hero-media" src="fundo.jpg">
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <span class="hero-badge">Lançamento Paciência/RJ</span>
