Update footer information in melhor_imovel.html

--- a/melhor_imovel.html
+++ b/melhor_imovel.html
@@ -1223,14 +1223,13 @@
         <div class="footer-content">
             <div class="footer-brand">Reserva Naturalis</div>
             <div class="footer-info">
-                <p><strong>Construtora Engefic</strong></p>
                 <p>Paciência - Rio de Janeiro/RJ</p>
-                <p>Lançamento 2024 • Entrega Janeiro/2027</p>
+                <p>Lançamento 2024 • Entrega Dezembro/2026</p>
             </div>
             <div class="footer-disclaimer">
                 <p>As imagens, plantas, valores e informações são meramente ilustrativos e estão sujeitos a alterações sem aviso prévio.</p>
                 <p>Consulte um de nossos consultores para informações atualizadas sobre disponibilidade, plantas, valores e condições de pagamento.</p>
-                <p style="margin-top: 20px;">© 2026 Reserva Naturalis. Todos os direitos reservados.</p>
+                <p style="margin-top: 20px;">© 2026 CRECI 100716 -  Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
