Update hero badge and footer text

--- a/melhor_imovel.html
+++ b/melhor_imovel.html
@@ -778,7 +778,7 @@
        <img class="hero-media" src="fundo.jpg">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <span class="hero-badge">Lançamento Paciência/RJ</span>
+            <span class="hero-badge">Paciência/RJ</span>
             <h1>Reserva Naturalis</h1>
             <p class="subtitle">Natureza e lazer em um só lugar</p>
             
@@ -1224,7 +1224,7 @@
             <div class="footer-brand">Reserva Naturalis</div>
             <div class="footer-info">
                 <p>Paciência - Rio de Janeiro/RJ</p>
-                <p>Lançamento 2024 • Entrega Dezembro/2026</p>
+                <p>Em breve • Entrega Dezembro/2026</p>
             </div>
             <div class="footer-disclaimer">
                 <p>As imagens, plantas, valores e informações são meramente ilustrativos e estão sujeitos a alterações sem aviso prévio.</p>
